chore: fix gap attempt 2

--- a/src/patterns/CountryPicker/_countryPickerModal.scss
+++ b/src/patterns/CountryPicker/_countryPickerModal.scss
@@ -9,15 +9,15 @@
 
     @media (max-width: $breakpoint-md) {
       height: 100dvh;
-      min-height: -webkit-fill-available;
       width: 100%;
     }
   }
 
   &__wrapper {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    height: 100%;
+    min-height: -webkit-fill-available;
   }
 
   &__header {
